# artists-to-see-live

./: .cache  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  extract_event_artists.py  main.py  pyproject.toml  ruff.toml  scrape_event_artists.py  test_commit.txt
embeddings_experiments/: CLEANUP_PLAN.md  DEPLOYMENT_OPTIONS.md  Dockerfile  FINAL_RESULTS.md  GITHUB_ACTION_SETUP.md  OPUS_4.1_EVALUTATION_ON_FINAL_RESULTS.md  READINESS_CHECK.md  README.md  SEARCH_FIX_PLAN.md  SPIKE_6_GITHUB_ACTION_SUMMARY.md  SPIKE_COMPARISON.md  artist_id_mapping.json  cleanup_hf_space.py  deploy_to_hf_spaces.py  find_artist_ids.py  mert_server.py  quick_validation.py  recommendations.md  setup_hf_space.py  spike.py  spike_6_mert_hf.py  spike_plan.md
example_emails/: 2025-10-31.html  2025-11-20.html  2025-11-8.html
output/: connections_summary_2025-11-8.md  day_image_mapping.json  edmtrain_events_2025-11-22.json  edmtrain_integration_plan.md  event_artists.json  event_connections.json  event_connections.md  event_connections_2025-11-04_06-07-17.md  event_connections_2025-11-8.md  events.json  events_2025-10-31.json  events_2025-11-20.json  events_2025-11-8.json  my_artists.json  path_grouping_refactor_plan.md  similar_artists_map.json
src/: __init__.py  artist_connection_search.py  build_day_image_mapping.py  data_loader.py  date_utils.py  edmtrain_api_fetcher.py  extract_artists.py  extract_artists_from_spotify_playlists.py  find_event_connections.py  models.py  music_map_scraper.py  scraper.py  techno_queers_email_scraper.py
tests/: __init__.py  test_scraper.py  (+2 more)
(+29 files in other folders)
