[project]
name = "artists-to-see-live"
version = "0.1.0"
description = "Scrape weekly event emails to extract artist, venue, and performance information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
