[project]
name = "artists-to-see-live"
version = "0.1.0"
description = "Scrape weekly event emails to extract artist, venue, and performance information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "huggingface-hub>=0.36.0",
    "librosa>=0.11.0",
    "lxml>=5.0.0",
    "numpy>=1.24.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "soundfile>=0.13.1",
    "spotipy>=2.25.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.1",
    "yt-dlp>=2025.10.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "scipy-stubs>=1.16.3.0",
]
